--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -41,6 +41,16 @@
             <label for="pinCode" [class.active]="true">Pincode *</label>
             <input type="text" class="form-control underlined" name="pinCode" id="pinCode" [(ngModel)]="company.pinCode" />
           </div>
+          <div class=" md-form ">
+            <label for="status" [class.active]="company.status!=''">Company Status *</label>
+            <select id="status" name="status" class="browser-default custom-select md-select" required="true" [(ngModel)]="company.status">
+              <option value="Company" selected>Company</option>
+              <option value="Partnership">Partnership</option>
+              <option value="Individual">Individual</option>
+              <option value="Trust">Trust</option>
+              <option value="LLP">LLP</option>
+            </select>
+          </div>
         </div>
 
         <div class="col-md-3 border-right">
