--- a/src/app/invoice/invoice.search.component.html
+++ b/src/app/invoice/invoice.search.component.html
@@ -29,14 +29,14 @@
           </div>
           <div class="col-md-3">
             <div class="md-form mt-1">
-            <label for="name">Performa Id </label>
+            <label for="name" class="active">Performa Id </label>
             <input type="text" class="form-control underlined" name="performa Id" id="performaId" required="false" [(ngModel)]="searchInvoice.performaId"
             />
             </div>
           </div>
           <div class="col-md-3">
             <div class="md-form mt-1">
-            <label for="name">Invoice Id </label>
+            <label for="name" class="active">Invoice Id </label>
             <input type="text" class="form-control underlined" name="invoiceId" id="invoiceId" required="false" [(ngModel)]="searchInvoice.invoiceId"
             />
             </div>
