--- a/src/app/manufacturing-invoice/invoice.manu.component.html
+++ b/src/app/manufacturing-invoice/invoice.manu.component.html
@@ -1,6 +1,7 @@
-<h3 class="mb-2 mb-sm-0 pt-1 pb-2">
-      <span>PerformA Invoice (Manufacturing)</span>
-    </h3>
+<div class="clearfix">
+  <h3 class="mb-2 mb-sm-0 pt-1 pb-2 float-left">Proforma Invoice (Manufacturing)</h3>
+  <button type="button" class="btn teal darken-3 float-right" (click)="createNewManuInvoice()">New Invoice</button>
+</div>
 
 <!-- Heading -->
 <div class="alert alert-danger" role="alert" *ngIf="error">
