ng chart changes

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
 
         <div style="display: block;">
          <canvas
-      baseChart
+      baseChart #baseChart="base-chart"
       [chartType]="'bar'"
       [datasets]="chartData"
       [labels]="chartLabels"
