--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,23 +13,14 @@
         Invoice
       </div>
       <div class="card-body">
-
-        <div style="display: block;">
-         <canvas
-      baseChart #baseChart="base-chart"
-      [chartType]="'bar'"
-      [datasets]="chartData"
-      [labels]="chartLabels"
-      [options]="chartOptions"
-      [legend]="true"
-      (chartClick)="onChartClick($event)">
-  </canvas>
+        <div *ngIf="chart">
+          <canvas id="canvas">{{chart}}</canvas>
         </div>
-
       </div>
     </div>
-
   </div>
+
+
   <div class="col-md-4">
     <div class="card">
       <div class="card-header stylish-color-dark white-text">
