head of account component changes - initial

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -60,6 +60,7 @@
                 <a routerLink="/client" class="dropdown-item waves-effect waves-light">Manage Clients</a>
                 <a routerLink="/users" class="dropdown-item waves-effect waves-light">Manage Users</a>
                 <a routerLink="/vendor" class="dropdown-item waves-effect waves-light">Manage Vendors</a>
+                <a routerLink="/headofaccount" class="dropdown-item waves-effect waves-light">Manage Head Of Account</a>
             </div>
           </li>
       <li class="nav-item dropdown">
