--- a/src/app/voucher/voucher.search.component.html
+++ b/src/app/voucher/voucher.search.component.html
@@ -140,7 +140,7 @@
             <b>Pan :</b> {{voucher.vendorPanNo}}
           </div>
           <div class="col-md-6 ">
-            <b>Head Of Account :</b> {{voucher.headOfAccount}}
+            <b>Head Of Account :</b> {{voucher.headOfAccountId}}
           </div>
           <div class="col-md-12 ">
             <b>Bank Details :</b> {{voucher.vendorBankAcctNo}},{{voucher.vendorBankName}},{{voucher.vendorBankBranch}},{{voucher.vendorBankBranchIfscCode}}
